turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:19: error: ':' expected but ')' found.
def setCouleurSol(couleur) {
                         ^LangtonsAnt:33: error: identifier expected but '}' found.
}
^